--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="description" content="Application de gestion et chatbot mutuelle" />
-    <title>Toto</title>
-
-    <!-- Favicon -->
+    <title>Cosumutuel</title>
     <link rel="icon" href="/favicon.ico" />
-
-    <!-- Basculer thème clair/sombre selon préférence OS -->
     <script>
       (() => {
         const userPref = window.matchMedia('(prefers-color-scheme: dark)').matches
@@ -24,12 +20,10 @@
   </head>
   <body>
     <div id="root"></div>
-
     <noscript>
-      <strong>JavaScript est désactivé ; l’application ne peut pas fonctionner correctement.</strong>
+      <strong>JavaScript est désactivé ; l’application ne peut pas fonctionner correctement.</strong>
     </noscript>
-
-    <!-- Point d’entrée de Vite -->
+    <!-- Le script ici pointe vers le fichier .jsx que Vite gère pour la production -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
